--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,5 @@ services:
         # - "443:443"
     volumes:
         - ./builds/dev:/usr/local/apache2/htdocs/
+        - ./build-environment/apache/httpd.conf:/usr/local/apache2/conf/httpd.conf
 
