--- a/app/.htaccess
+++ b/app/.htaccess
@@ -11,8 +11,13 @@ AddOutputFilterByType DEFLATE application/rss+xml
 AddOutputFilterByType DEFLATE application/javascript
 AddOutputFilterByType DEFLATE application/x-javascript
 
-# Don't show directory listings for URLs which map to a directory.
+# don't show directory listings for URLs which map to a directory.
 Options -Indexes
 
-# redirect for favicon....
+# redirect for favicon
 Redirect /favicon.ico /assets/images/favicon.png
+
+# redirect legacy urls
+Redirect /fellows /collaborate/2016/summer/fellows/
+Redirect /fellows/fellows-application-2017 /collaborate/2017/summer/fellows/apply/
+Redirect /projects/free-the-law /projects/case-law-access-project/
