--- a/app/_config.yml
+++ b/app/_config.yml
@@ -43,12 +43,6 @@ collections:
 
 # Defaults
 defaults:
-  -
-    scope:
-      path: ""
-    values:
-      layout: "page"
-      custom-footer: false
   - scope:
       path: ""
       type: projects_active
@@ -61,3 +55,7 @@ defaults:
     values:
       layout: project
       body-class: sketch
+  - scope:
+      path: ""
+    values:
+      custom-footer: false
