--- a/build-environment/apache/httpd.conf
+++ b/build-environment/apache/httpd.conf
@@ -283,7 +283,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.js
 </IfModule>
 
 #
