--- a/app/_config.yml
+++ b/app/_config.yml
@@ -50,6 +50,10 @@ news_feed_for:
   - sketches_active
   - sketches_retired
 
+contributors_feed_for:
+  - projects_active
+  - projects_retired
+
 # Defaults
 defaults:
   - scope:
