--- a/app/_config.yml
+++ b/app/_config.yml
@@ -8,6 +8,7 @@ gems:
   - jekyll-sitemap
 liquid:
   error_mode: strict
+exclude: ["assets/_scss"]
 
 # Site settings
 title: The Library Innovation Lab at Harvard University
