--- a/build-environment/apache/httpd.conf
+++ b/build-environment/apache/httpd.conf
@@ -301,7 +301,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 # logged here.  If you *do* define an error logfile for a <VirtualHost>
 # container, that host's errors will be logged there and not here.
 #
-ErrorLog /proc/self/fd/2
+ErrorLog logs/error-log.log
 
 #
 # LogLevel: Control the number of messages logged to the error_log.
@@ -330,7 +330,7 @@ LogLevel warn
     # define per-<VirtualHost> access logfiles, transactions will be
     # logged therein and *not* in this file.
     #
-    CustomLog /proc/self/fd/1 common
+    CustomLog "logs/access-log.log" common
 
     #
     # If you prefer a logfile with access, agent, and referer information
