Serve both dev and prod builds.

--- a/build-environment/apache/httpd.conf
+++ b/build-environment/apache/httpd.conf
@@ -49,7 +49,8 @@ ServerRoot "/usr/local/apache2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen 80
+Listen 8080
+Listen 8081
 
 #
 # Dynamic Shared Object (DSO) Support
@@ -500,6 +501,14 @@ LogLevel warn
 
 # Virtual hosts
 #Include conf/extra/httpd-vhosts.conf
+
+<VirtualHost *:8080>
+    DocumentRoot "/usr/local/apache2/htdocs/dev"
+</VirtualHost>
+
+<VirtualHost *:8081>
+    DocumentRoot "/usr/local/apache2/htdocs/prod"
+</VirtualHost>
 
 # Local access to the Apache HTTP Server Manual
 #Include conf/extra/httpd-manual.conf
