--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: ./build-environment/Dockerfile
-    image: rcremona/lil-website:0.3
+    image: lil-website:0.3
     command: bash
     tty: true
     volumes:
