--- a/build-environment/apache/httpd.conf
+++ b/build-environment/apache/httpd.conf
@@ -284,7 +284,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html index.js
+    DirectoryIndex index.html
 </IfModule>
 
 #
