--- a/app/.htaccess
+++ b/app/.htaccess
@@ -30,16 +30,16 @@ Redirect /favicon.ico /assets/images/favicon.png
 Redirect permanent "/about.html" "/about/"
 Redirect permanent "/projects.html" "/projects/"
 
-# redirect legacy urls
-Redirect permanent "/fellows" "/collaborate/2016/summer/fellows/"
-Redirect permanent "/fellows/fellows-application-2017" "/collaborate/2017/summer/fellows/apply/"
-Redirect permanent "/projects/free-the-law" "/projects/case-law-access-project/"
-
+# these run before Redirect directives
 <IfModule mod_rewrite.c>
   RewriteEngine on
 
   # added per JC 2016-09-20 -- BRS
   RewriteCond "%{HTTP_HOST}"   "^librarylab\.law\.harvard\.edu" [NC]
   RewriteRule "^/?(.*)"        "http://lil.law.harvard.edu/$1" [L,R=301]
-
 </IfModule>
+
+# redirect legacy urls
+Redirect permanent "/fellows-application-2017" "/collaborate/2017/summer/fellows/apply/"
+Redirect permanent "/fellows" "/collaborate/2016/summer/fellows/"
+Redirect permanent "/projects/free-the-law" "/projects/case-law-access-project/"
