Andy and Anastasia are two different people.

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -175,7 +175,7 @@ andy-silva:
   website:
   twitter_account_name: SomeInterwebDev
   github_account_name:
-  image: anastasia-aizman.png
+  image: andrew-silva.jpg
   affiliated: true
 
 ben-steinberg:
