Add 2016 fellows application.

--- a/app/.htaccess
+++ b/app/.htaccess
@@ -41,5 +41,6 @@ Redirect permanent "/projects.html" "/projects/"
 
 # redirect legacy urls
 Redirect permanent "/fellows-application-2017" "/collaborate/2017/summer/fellows/apply/"
+Redirect permanent "/fellows-application-2016" "/collaborate/2016/summer/fellows/apply/"
 Redirect permanent "/fellows" "/collaborate/2016/summer/fellows/"
 Redirect permanent "/projects/free-the-law" "/projects/case-law-access-project/"
