Fix cut/paste errors.

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -111,7 +111,7 @@ jay-edwards:
   sort_name: Edwards
   role: Fellow
   bio:
-  email: sbates@cyber.law.harvard.edu
+  email: jay@meangrape.com
   website:
   twitter_account_name: meangrape
   github_account_name:
