Added caitlin bio

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -173,7 +173,10 @@ caitlin-laughlin:
   name: Caitlin Laughlin
   sort_name: Laughlin
   role: Perma Admin
-  bio:
+  bio: >
+    Caitlin is a history and politics nerd who spends most of her free time 
+    reading about obsure historical events, playing musical soundtracks too 
+    loudly, and hanging with her roommates' cats.
   email: claughlin@law.harvard.edu
   website:
   twitter_account_name:
