--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -87,7 +87,7 @@ rebecca-cremona:
 jack-cushman:
   name: Jack Cushman
   sort_name: Cushman
-  role: Developer
+  role: 
   bio: >
     Jack is an attorney, developer, and tinkerer. He once built a
     working web server using only a Perl script, a paperclip, and a
