Add Kyle Courtney.

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -356,6 +356,12 @@ deborah-chase:
   role: Digitization Specialist
   affiliated: false
 
+kyle-courtney:
+  name: Kyle K. Courtney
+  sort_name: Courtney
+  role: Copyright Advisor and Program Manager, HL Office for Scholarly Communication
+  affiliated: false
+
 emma-cushman:
   name: Emma Cushman
   sort_name: Cushman
