--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -160,7 +160,7 @@ brett-johnson:
   sort_name: Johnson
   role: Outreach and Support
   bio: >
-    Brett’s a human who’d prefer identifying as a mammal that talks. He’s interested in things working and not working and used to unjam printers as IT at an art school but doesn’t have the body for that anymore.
+    Brett's a human who'd prefer identifying as a mammal that talks. He's interested in things working and not working and used to unjam printers as IT at an art school but doesn't have the body for that anymore.
   email:  bjohnson@law.harvard.edu
   website:  http://forrealdude.tumblr.com
   twitter_account_name:
