update news with article from jan 30 2017
http://etseq.law.harvard.edu/2017/01/caselaw-access-project-scanning-now-complete/

--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -4,6 +4,13 @@
 ### CAP ###
 - project: caselaw-access-project
   type: blog
+  title: Caselaw Access Project Scanning Now Complete
+  publication: Et Seq. - Harvard Law School Library
+  date: January 30, 2017
+  url: http://etseq.law.harvard.edu/2017/01/caselaw-access-project-scanning-now-complete/
+
+- project: caselaw-access-project
+  type: blog
   title: Caselaw Access Project
   publication: Et Seq. - Harvard Law School Library
   date: August 08, 2016
