--- a/app/_config.yml
+++ b/app/_config.yml
@@ -18,7 +18,7 @@ title: The Library Innovation Lab at Harvard University
 description: >
   Bringing the best of technology to the world of libraries and the best of libraries to the world of technology. And vice versa.
 baseurl: ""
-url: "http://lil.law.harvard.edu"
+url: "https://lil.law.harvard.edu"
 sharing-image: "thumbs/800x800r/lab-hero-narrow.jpg"
 
 # Contact
