--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -329,6 +329,8 @@ anna-bialas:
   name: Anna Bialas
   sort_name: Bialas
   role: LIL and Berkman Summer Intern 
+  website: http://trash.exchange
+  twitter_account_name: femalegazebot
   github_account_name: annabialas
   affiliated: summer
   image: anna-bialas.png
