--- a/build-environment/Gemfile
+++ b/build-environment/Gemfile
@@ -1,4 +1,4 @@
 source "https://rubygems.org"
-gem 'jekyll', '3.2.1'
+gem 'jekyll', '3.5.1'
 gem 'jekyll-sitemap', '0.11.0'
-gem 'jekyll-paginate', '1.1.0'
+gem 'jekyll-paginate-v2', '1.8.1'
