--- a/app/_config.yml
+++ b/app/_config.yml
@@ -119,16 +119,45 @@ pagination:
   category: 'posts'
 
   # Optional, the default tag to use, omit to disable
-  tag: ''
+  # tag: ''
 
   # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts,
   # in reality this can be any value, suggested are the Microsoft locale-codes (e.g. en_US, en_GB) or simply the ISO-639 language code )
-  locale: ''
+  # locale: ''
 
  # Optional,omit or set both before and after to zero to disable.
  # Controls how the pagination trail for the paginated pages look like.
-  trail:
-    before: 2
-    after: 2
+ # trail:
+ #   before: 2
+ #   after: 2
 
 ############################################################
+
+############################################################
+# Site configuration for the Auto-Pages feature
+# The values here represent the defaults if nothing is set
+autopages:
+
+  # Site-wide kill switch, disable here and it doesn't run at all
+  enabled: true
+
+  # Category pages, omit entire config element to disable
+  categories:
+    # Optional, the list of layouts that should be processed for every category found in the site
+    layouts:
+      - 'tag_or_category.html'
+    # Optional, the title that each category paginate page should get (:cat is replaced by the Category name)
+    title: 'Posts in category :cat'
+    # Optional, the permalink for the  pagination page (:cat is replaced),
+    # the pagination permalink path is then appended to this permalink structure
+    permalink: '/blog/category/:cat'
+
+  collections:
+    enabled: false
+
+  # Tag pages, omit to disable
+  tags:
+    layouts:
+      - 'tag_or_category.html'
+    title: 'Posts tagged with :tag' # :tag is replaced by the tag name
+    permalink: '/blog/tag/:tag'
