--- a/build-environment/package.json
+++ b/build-environment/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-contrib-copy": "1.0.0",
-    "grunt-contrib-cssmin": "0.13.0",
+    "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-htmlmin": "2.0.0",
     "grunt-contrib-watch": "1.0.0",
     "grunt-exec": "0.4.6",
