Use make on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ services:
 
 before_install:
   - npm install vnu-jar
-  - docker-compose up -d
 
 script:
-  - docker-compose exec jekyll grunt build:travis
+  - make travis
   - test -z $(java -jar node_modules/vnu-jar/build/dist/vnu.jar --skip-non-html --errors-only --filterfile tests/config/vnufilter.txt builds/prod/)
