Added the SCRIPTed article

--- a/app/_data/news.yaml
+++ b/app/_data/news.yaml
@@ -8,6 +8,13 @@
   publication: Et Seq. - Harvard Law School Library
   date: August 08, 2016
   url: http://etseq.law.harvard.edu/2016/08/caselaw-access-project/
+  
+- project: caselaw-access-project
+  type: press
+  title: Open Data and the Free Access to Law Movement in the United States
+  publiction: SCRIPTed
+  date: March 26, 2016
+  url: https://script-ed.org/blog/open-data-and-the-free-access-to-law-movement-in-the-united-states/
 
 - project: caselaw-access-project
   type: press
