--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -216,7 +216,7 @@ jonathan-zittrain:
   bio: >
     JZ is a proud dog owner. Oh, and he directs the Law School Library,
     co-created the Berkman Center, is an EFF board member, and is
-    faculty in the Law School, School of Engineering and Applies
+    faculty in the Law School, School of Engineering and Applied
     Sciences, and the Kennedy School.
   email: a2jz@law.harvard.edu
   website: http://jz.org
