--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -237,7 +237,7 @@ alexandra-dolan-mescal:
   website: http://dhalab.org/alexdm
   twitter_account_name: fromadmwithlove
   github_account_name:
-  affiliated: true
+  affiliated: summer
 
 # Friends, Former Staff, Former Fellows, etc.
 # (not currently officially affiliated unless affiliated says 'summer' - that means they are currently here) #
