Change affiliation to summer

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -182,7 +182,7 @@ tim-walsh:
   website: https://www.bitarchivist.net/
   twitter_account_name: bitarchivist
   github_account_name: timothyryanwalsh
-  affiliated: true
+  affiliated: summer
 
 jessamyn-west:
   name: Jessamyn West
