--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         - ./assets:/usr/src/lil-website/assets
         - ./builds:/usr/src/lil-website/builds
   server:
-    image: httpd
+    image: httpd:2.4
     ports:
         - "8080:8080"
         - "8081:8081"
