Alphabetize, comment, tweak.

--- a/app/_data/people.yaml
+++ b/app/_data/people.yaml
@@ -7,6 +7,7 @@
 
 
 # Currently affiliated #
+# set "affiliated: true" or "affiliated: summer" #
 
 anastasia-aizman:
   name: Anastasia Aizman
@@ -54,6 +55,17 @@ rebecca-cremona:
   github_account_name:
   image: rebecca-cremona.jpg
   affiliated: true
+
+franny-corry:
+  name: Franny Corry
+  sort_name: Corry
+  role: 2018 Summer Fellow
+  bio:
+  email: corry@usc.edu
+  website: francescorry.net
+  twitter_account_name:
+  github_account_name:
+  affiliated: summer
 
 jack-cushman:
   name: Jack Cushman
@@ -151,6 +163,17 @@ caitlin-laughlin:
   github_account_name:
   image: caitlin-laughlin.jpg
   affiliated: true
+
+satvik-shukla:
+  name: Satvik Shukla
+  sort_name: Shukla
+  role: Intern
+  bio:
+  email:
+  website: www.satvikshukla.com
+  twitter_account_name:
+  github_account_name: satvikshukla
+  affiliated: summer
 
 andy-silva:
   name: Andy Silva
@@ -255,31 +278,7 @@ jonathan-zittrain:
 
 
 # Friends, Former Staff, Former Fellows, etc.
-# (not currently officially affiliated unless affiliated says 'summer' - that means they are currently here) #
-
-satvik-shukla:
-  name: Satvik Shukla
-  sort_name: Shukla
-  role: Intern
-  bio:
-  email:
-  website: www.satvikshukla.com
-  twitter_account_name:
-  github_account_name: satvikshukla
-  image:
-  affiliated: summer
-
-franny-corry:
-  name: Franny Corry
-  sort_name: Corry
-  role: Summer Fellow
-  bio:
-  email: corry@usc.edu
-  website: francescorry.net
-  twitter_account_name:
-  github_account_name:
-  image:
-  affiliated: summer
+# set "affiliated: false" #
 
 kim-dulin:
   name: Kim Dulin
